add logo to index

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
       text-align: center;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
+    #logo {
+      display: block;
+      margin: 20px;
+    }
   </style>
 </head>
 
 <body>
   <h1>Welcome to Backup and Migrate</h1>
+  <img id="logo" src="bam.png">
 </body>
 </html>
