--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
-      background:#ddd;
+      background:#fff;
       color: #333;
       text-align: center;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
     #logo {
-      display: block;
       margin: 20px;
     }
   </style>
